--- a/Node.js/02_shop/views/shop.html
+++ b/Node.js/02_shop/views/shop.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Add-product</title>
-    <link rel="stylesheet" href="../public/style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header class="main-header">
@@ -17,8 +17,10 @@
     </header>
 
     <main>
-      <h1>My Products</h1>
-      <p>List of all products...</p>
+      <div class="shop">
+        <h1>My Products</h1>
+        <p>List of all products...</p>
+      </div>
     </main>
   </body>
 </html>
