--- a/Node.js/02_shop/public/style.css
+++ b/Node.js/02_shop/public/style.css
@@ -36,25 +36,33 @@ a{
     padding: 2rem;
 }
 
+.shop p, .shop h1 {
+    margin-left: 2rem;
+}
+
 .shop p {
     font-size: 1.1rem;
 }
 
 form {
     margin-top: 5rem;
+    width: max-content;
+    margin: 5rem auto;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .input-group {
     display: flex;
-    align-items: center;
+    flex-direction: column;
 }
 
 #name {
     border-radius: .25rem;
-    height: 1.5rem;
+    height: 2rem;
+    width: 20rem;
+    margin-top: 1rem;
 }
 
 label{
@@ -63,7 +71,7 @@ label{
 }
 
 button {
-    margin-top: 3rem;
+    margin-top: 2rem;
     font-size: 1.2rem;
     padding: .25rem .5rem;
     border-radius: .25rem;
