--- a/Node.js/02_shop/views/add-product.html
+++ b/Node.js/02_shop/views/add-product.html
@@ -20,7 +20,11 @@
       <form action="/add-product" method="POST">
         <div class="input-group">
           <label for="name">Name:</label>
-          <input type="text" id="name" />
+          <input type="text" id="name" name="name" />
+          <label for="price">Price:</label>
+          <input type="number" id="price" name="price" />
+          <label for="desc">Description:</label>
+          <input type="text" id="desc" name="desc" />
         </div>
         <button type="submit">Add Product</button>
       </form>
