--- a/Node.js/02_shop/views/shop.html
+++ b/Node.js/02_shop/views/shop.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Add-product</title>
+    <title>Shop</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -17,10 +17,29 @@
     </header>
 
     <main>
-      <div class="shop">
-        <h1>My Products</h1>
-        <p>List of all products...</p>
+      <div class="grid">
+        <article class="card product-item">
+          <header class="card-header">
+            <h2 class="product-title">Book Title</h2>
+          </header>
+          <div class="card-img">
+            <img
+              src="https://www.neh.gov/sites/default/files/styles/medium/public/2018-06/openbooks.jpg?itok=kUdGYpx_"
+              alt="A great book"
+            />
+          </div>
+          <div class="card-content">
+            <h2 class="product-price">Rs. 499</h2>
+            <p class="product-desc">A great book description.</p>
+          </div>
+          <div class="card-action">
+            <button class="btn">Add to cart</button>
+          </div>
+        </article>
       </div>
+
+      <!-- If there are no products -->
+      <h1>No Products</h1>
     </main>
   </body>
 </html>
