--- a/Node.js/02_shop/public/style.css
+++ b/Node.js/02_shop/public/style.css
@@ -1,78 +1,195 @@
-body{
-    margin: 3rem;
+body {
+  /* margin: 3rem auto; */
+  background-color: #e8e8e8;
 }
 
-.main-header{
-    background-color: #b5b2b2;
-    padding: 10px;
-    border-radius: 1rem;
-    max-width: 700px;
-    margin: 0px auto;
+.main-header {
+  background-color: #045152;
+  padding: 10px;
+  border-radius: .75rem;
+  /* max-width: 700px; */
+  margin: 0px auto;
 }
 
-.ul{
-    list-style-type: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1.5rem;
+.ul {
+  list-style-type: none;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  font-size: 1.5rem;
 }
 
-.item{
-    margin-right: 1.5rem;
+.item {
+  margin-right: 2rem;
 }
 
-a{
-    text-decoration: none;
+.item a {
+  text-decoration: none;
+  color: yellow;
 }
 
-.item a:hover{
-    color: rgb(255, 255, 255);
+.item a:hover {
+  color: rgb(255, 255, 255);
 }
 
 .shop {
-    max-width: 700px;
-    margin: 0px auto;
-    padding: 2rem;
+  max-width: 700px;
+  margin: 0px auto;
+  padding: 2rem;
 }
 
-.shop p, .shop h1 {
-    margin-left: 2rem;
+.shop p,
+.shop h1 {
+  margin-left: 2rem;
 }
 
 .shop p {
-    font-size: 1.1rem;
+  font-size: 1.1rem;
 }
 
 form {
-    margin-top: 5rem;
-    width: max-content;
-    margin: 5rem auto;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+  width: max-content;
+  margin: 3rem auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+form input {
+  font-size: 1.1rem;
+  padding-left: 0.5rem;
+  margin-top: .5rem;
+  margin-left: .5rem;
+  border: 2px solid #000000;
+  font: inherit;
+  border-radius: 0.25rem;
+  height: 2rem;
+  width: 18rem;
 }
 
 .input-group {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
-#name {
-    border-radius: .25rem;
-    height: 2rem;
-    width: 20rem;
-    margin-top: 1rem;
-}
-
-label{
-    margin-right: 1rem;
-    font-size: 1.3rem;
+label {
+  margin-right: 1rem;
+  margin-top: 1.5rem;
+  font-size: 1.3rem;
 }
 
 button {
-    margin-top: 2rem;
-    font-size: 1.2rem;
-    padding: .25rem .5rem;
-    border-radius: .25rem;
+  margin-top: 2rem;
+  font-size: 1.2rem;
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.25rem;
+}
+
+.grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: stretch;
+  margin-top: 2rem;
+}
+
+main h1 {
+  /* max-width: 700px; */
+  margin: 0 auto;
+  padding-left: 1.5rem;
+  margin-top: 2rem;
+  font-size: 1.75rem;
+}
+
+.card {
+  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.26);
+  border-radius: .5rem;
+  margin-bottom: 2rem;
+}
+
+.card-header,
+.card-content {
+  padding: 1rem;
+}
+
+.card-header h1,
+.card-content h1,
+.card-content h2,
+.card-content p {
+  margin: 0;
+}
+
+.card-img {
+  width: 100%;
+}
+
+.card-img img {
+  width: 100%;
+}
+
+.card-action {
+  padding: 1rem;
+  text-align: center;
+  margin-top: -1rem;
+}
+
+.card-action button,
+.card-action a {
+  margin: 0 0.25rem;
+}
+
+.card-content .product-desc {
+  margin-top: 1rem;
+  text-align: center;
+  font-size: 1.1rem;
+}
+
+.btn {
+  font: inherit;
+  font-weight: 600;
+  border: 2px solid #00695c;
+  color: #00695c;
+  background: white;
+  border-radius: 3px;
+  cursor: pointer;
+  font-size: large;
+  margin: 2rem auto;
+}
+
+.btn:hover,
+.btn:active {
+  background-color: #00695c;
+  color: white;
+}
+
+form input:focus {
+  outline-color: #00695c;
+  height: 2.2rem;
+}
+
+.product-form {
+  width: 20rem;
+  max-width: 90%;
+  margin: auto;
+}
+
+.product-item {
+  width: 20rem;
+  max-width: 95%;
+}
+
+.product-title {
+  font-size: 1.2rem;
+  text-align: center;
+}
+
+.product-price {
+  text-align: center;
+  color: #1a1a1a;
+  margin-bottom: 0.5rem;
+}
+
+#error{
+  margin-top: 2rem;
+  margin-left: 2rem;
 }
