modify routes for controllers

--- a/Node.js/02_shop/views/includes/main.ejs
+++ b/Node.js/02_shop/views/includes/main.ejs
@@ -11,7 +11,10 @@
       <nav class="nav">
         <ul class="ul">
           <li class="item"><a href="/">Shop</a></li>
+          <li class="item"><a href="/products">Products</a></li>
+          <li class="item"><a href="/cart">View Cart</a></li>
           <li class="item"><a href="/add-product">Add Product</a></li>
+          <li class="item"><a href="/admin/products">Admin Products</a></li>
         </ul>
       </nav>
     </header>
