--- a/Node.js/02_shop/public/style.css
+++ b/Node.js/02_shop/public/style.css
@@ -1,21 +1,20 @@
 body {
-  /* margin: 3rem auto; */
   background-color: #e8e8e8;
+  margin: 8px 0px;
 }
 
 .main-header {
   background-color: #045152;
   padding: 10px;
-  border-radius: .75rem;
-  /* max-width: 700px; */
-  margin: 0px auto;
+  /* border-radius: 0.5rem; */
+  margin: 0px;
 }
 
 .ul {
   list-style-type: none;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   font-size: 1.5rem;
 }
 
@@ -25,11 +24,17 @@ body {
 
 .item a {
   text-decoration: none;
-  color: yellow;
+  color: rgb(255, 255, 255);
 }
 
 .item a:hover {
-  color: rgb(255, 255, 255);
+  color: rgb(255, 255, 0);
+}
+
+.item .active {
+  color: rgb(255, 255, 0);
+  text-decoration: underline;
+  text-underline-offset: 6px;
 }
 
 .shop {
@@ -47,33 +52,61 @@ body {
   font-size: 1.1rem;
 }
 
-form {
+.form-control {
   width: max-content;
   margin: 3rem auto;
+  padding: 1rem 0;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.26);
+  border-radius: 8px;
 }
 
-form input {
+.form-control input,
+.form-control textarea {
   font-size: 1.1rem;
   padding-left: 0.5rem;
-  margin-top: .5rem;
-  margin-left: .5rem;
+  margin-top: 0.5rem;
+  margin-left: 0.5rem;
   border: 2px solid #000000;
   font: inherit;
   border-radius: 0.25rem;
   height: 2rem;
-  width: 18rem;
+  width: 25rem;
+}
+
+.form-control textarea {
+  height: 5rem;
 }
 
 .input-group {
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+
+.inner-grp .name,
+.inner-grp .price {
+  width: 40%;
+}
+
+.inner-grp {
+  display: flex;
+  justify-content: space-around;
+}
+
+.inner-grp2 {
+  display: flex;
+  flex-direction: column;
+}
+
+.inner-grp #name,
+.inner-grp #price {
+  width: 10rem;
 }
 
 label {
-  margin-right: 1rem;
   margin-top: 1.5rem;
   font-size: 1.3rem;
 }
@@ -94,7 +127,6 @@ button {
 }
 
 main h1 {
-  /* max-width: 700px; */
   margin: 0 auto;
   padding-left: 1.5rem;
   margin-top: 2rem;
@@ -103,13 +135,12 @@ main h1 {
 
 .card {
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.26);
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   margin-bottom: 2rem;
 }
 
-.card-header,
 .card-content {
-  padding: 1rem;
+  padding: 0.75rem;
 }
 
 .card-header h1,
@@ -125,22 +156,21 @@ main h1 {
 
 .card-img img {
   width: 100%;
+  max-height: 200px;
 }
 
 .card-action {
-  padding: 1rem;
-  text-align: center;
-  margin-top: -1rem;
+  padding: 0.75rem;
+  margin-top: -0.75rem;
 }
 
 .card-action button,
 .card-action a {
-  margin: 0 0.25rem;
+  margin: 0;
 }
 
 .card-content .product-desc {
-  margin-top: 1rem;
-  text-align: center;
+  margin-top: 0.75rem;
   font-size: 1.1rem;
 }
 
@@ -153,7 +183,7 @@ main h1 {
   border-radius: 3px;
   cursor: pointer;
   font-size: large;
-  margin: 2rem auto;
+  margin: 2rem auto 1rem;
 }
 
 .btn:hover,
@@ -162,7 +192,7 @@ main h1 {
   color: white;
 }
 
-form input:focus {
+.form-control input:focus {
   outline-color: #00695c;
   height: 2.2rem;
 }
@@ -179,17 +209,21 @@ form input:focus {
 }
 
 .product-title {
-  font-size: 1.2rem;
-  text-align: center;
+  font-size: 1.5rem;
+  margin-left: 1rem;
 }
 
 .product-price {
-  text-align: center;
   color: #1a1a1a;
   margin-bottom: 0.5rem;
+  font-size: 1.2rem;
 }
 
-#error{
+#error {
   margin-top: 2rem;
   margin-left: 2rem;
+}
+
+.order {
+  text-align: center;
 }
