--- a/Node.js/02_shop/views/includes/main.ejs
+++ b/Node.js/02_shop/views/includes/main.ejs
@@ -4,17 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= pageTitle %> </title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../../style.css" />
   </head>
   <body>
     <header class="main-header">
       <nav class="nav">
         <ul class="ul">
-          <li class="item"><a href="/">Shop</a></li>
-          <li class="item"><a href="/products">Products</a></li>
-          <li class="item"><a href="/cart">View Cart</a></li>
-          <li class="item"><a href="/add-product">Add Product</a></li>
-          <li class="item"><a href="/admin/products">Admin Products</a></li>
+          <li class="item"><a class="<%= path === '/' ? 'active' : '' %>" href="/">Shop</a></li>
+          <li class="item"><a class="<%= path === '/products' ? 'active' : '' %>" href="/products">Products</a></li>
+          <li class="item"><a class="<%= path === '/cart' ? 'active' : '' %>" href="/cart">View Cart</a></li>
+          <li class="item"><a class="<%= path === '/orders' ? 'active' : '' %>" href="/orders">Orders</a></li>
+          <li class="item"><a class="<%= path === '/admin/add-product' ? 'active' : '' %>" href="/admin/add-product">Add Product</a></li>
+          <li class="item"><a class="<%= path === '/admin/products' ? 'active' : '' %>" href="/admin/products">Admin Products</a></li>
         </ul>
       </nav>
     </header>
