page styling changed

--- a/Node.js/02_shop/views/shop/index.ejs
+++ b/Node.js/02_shop/views/shop/index.ejs
@@ -15,7 +15,7 @@
             />
           </div>
           <div class="card-content">
-            <h2 class="product-price">Rs. <%= product.price %></h2>
+            <h2 class="product-price">Rs. <%= product.price %>/-</h2>
             <p class="product-desc"><%= product.desc %></p>
           </div>
           <div class="card-action">
