--- a/Node.js/02_shop/views/shop/product-detail.ejs
+++ b/Node.js/02_shop/views/shop/product-detail.ejs
@@ -1,17 +1,19 @@
 <%- include('../includes/main.ejs') %>
 
-    <main class="order">
-        <h1><%= product.name  %></h1>
-        <hr>
-        <div>
+    <main class="pro-detail">
+        <!-- <hr> -->
+        <div class="pro-detail-img">
             <img src="<%= product.imgUrl  %>" alt="<%= product.name  %>">
         </div>
-        <h2><%= product.price  %></h2>
-        <p><%= product.desc  %></p>
-        <form action="/cart" method="POST">
-            <button class="btn" type="submit">Add to Cart</button>
-            <input type="hidden" name="productId" value="<%= product.id %>">
-        </form>
+        <div class="detail">
+            <h1><%= product.name  %></h1>
+            <h2><%= product.price  %>/-</h2>
+            <p><%= product.desc  %></p>
+            <form action="/cart" method="POST">
+                <button class="btn" type="submit">Add to Cart</button>
+                <input type="hidden" name="productId" value="<%= product.id %>">
+            </form>
+        </div>
     </main>
 </body>
 </html>
