--- a/Node.js/02_shop/public/style.css
+++ b/Node.js/02_shop/public/style.css
@@ -101,6 +101,11 @@ body {
   flex-direction: column;
 }
 
+.inner-grp2 img {
+  max-width: 160px;
+  margin: 1rem auto 0;
+}
+
 .inner-grp #name,
 .inner-grp #price {
   width: 10rem;
@@ -156,7 +161,9 @@ main h1 {
 
 .card-img img {
   width: 100%;
-  max-height: 200px;
+  /* min-height: 180px;
+  max-height: 200px; */
+  height: 200px;
 }
 
 .card-action {
@@ -182,7 +189,7 @@ main h1 {
   background: white;
   border-radius: 3px;
   cursor: pointer;
-  font-size: large;
+  font-size: medium;
   margin: 2rem auto 1rem;
 }
 
@@ -190,6 +197,21 @@ main h1 {
 .btn:active {
   background-color: #00695c;
   color: white;
+}
+
+.btn-grp {
+  display: flex;
+  /* justify-content: space-around; */
+}
+
+.btn-grp a {
+  text-decoration: none;
+  color: #00695c;
+  padding: 4px;
+}
+
+.btn-grp .btn {
+  margin-right: 1rem;
 }
 
 .form-control input:focus {
@@ -217,6 +239,48 @@ main h1 {
   color: #1a1a1a;
   margin-bottom: 0.5rem;
   font-size: 1.2rem;
+}
+
+.pro-detail {
+  max-width: 800px;
+  margin: 8rem auto;
+  display: flex;
+  box-shadow: 0 0 8px rgb(86, 85, 85);
+}
+
+.pro-detail .pro-detail-img, .pro-detail .detail {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+
+.pro-detail-img img {
+  width: 100%;
+  min-height: 260px;
+  max-height: 300px;
+}
+
+.pro-detail .detail {
+  margin-left: 3rem;
+}
+
+.detail h1 {
+  margin-left: 0;
+  padding: 0;
+}
+
+.detail h2{
+  font-size: 1.25rem;
+  margin-top: 0.75rem;
+}
+
+.detail p {
+  font-size: 1.25rem;
+  margin-top: 0;
+}
+
+.detail .btn {
+  margin-top: 0;
 }
 
 #error {
