--- a/Node.js/02_shop/views/admin/edit-product.ejs
+++ b/Node.js/02_shop/views/admin/edit-product.ejs
@@ -1,40 +1,38 @@
 <%- include('../includes/main.ejs') %>
     <main>
       <form 
-        action="/admin/<% if(isEditing) { %>
-            edit-product 
-        <% } else { %> 
-            add-product 
-        <% } %> >" method="POST" class="form-control"
+        action="/admin/<%= isEditing ? 'edit-product' : 'add-product' %>" 
+        method="POST" 
+        class="form-control"
     >
         <div class="input-group">
           <div class="inner-grp">
             <div class="name">
               <label for="name">Name:</label>
-            <input type="text" id="name" name="name" value="<%= if(isEditing) { %> product.name <% } %>"/>
+            <input type="text" id="name" name="updatedName" value="<%= isEditing ? product.name : '' %>"/>
             </div>
             <div class="price">
               <label for="price">Price:</label>
-            <input type="number" id="price" name="price" value="<%= if(isEditing) { %> product.price <% } %>"/>
+            <input type="number" id="price" name="updatedPrice" value="<%= isEditing ? product.price : '' %>"/>
             </div>
           </div>
           <div class="inner-grp2">
             <label for="imgUrl">Image URL:</label>
-            <input type="text" id="imgUrl" name="imgUrl" value="<%= if(isEditing) { %> product.imgUrl <% } %>">
+            <input type="text" id="imgUrl" name="updatedImgUrl" value="<%= isEditing ? product.imgUrl : '' %>">
+            <img src="<%= isEditing ? product.imgUrl : '' %>" alt="No preview available">
             <label for="desc">Description:</label>
-            <textarea id="desc" name="desc" value="<%= if(isEditing) { %> product.desc <% } %>"></textarea>
+            <textarea id="desc" name="updatedDesc"><%= isEditing ? product.desc : '' %></textarea>
           </div>
         </div>
-        <% if(isEditing) %>
+        <% if(isEditing){ %>
             <input type="hidden" value="<%= product.id %>" name="productId">
-        <%  %>
+        <% } %>
         <button class="btn" type="submit">
             <% if(isEditing) { %>
-                Save changes 
+                Update Product 
             <% } else { %> 
                 Add Product 
             <% } %> 
-        >
         </button>
       </form>
     </main>
