--- a/Node.js/02_shop/views/admin/products.ejs
+++ b/Node.js/02_shop/views/admin/products.ejs
@@ -15,13 +15,18 @@
             />
           </div>
           <div class="card-content">
-            <h2 class="product-price">Rs. <%= product.price %></h2>
+            <h2 class="product-price">Rs. <%= product.price %>/-</h2>
             <p class="product-desc"><%= product.desc %></p>
           </div>
-          <div class="card-action">
-            <a href="/admin/edit-product/<%= product.id %>?edit=true "><button class="btn">Edit</button></a>
+          <div class="card-action btn-grp">
+            <!-- <a href="/admin/edit-product/<%= product.id %>?edit=true"><button class="btn">Edit</button></a> -->
+            <form action="/admin/edit-product/<%= product.id %>" method="GET">
+              <input type="hidden" name="edit" value="true">
+              <button class="btn" type="submit">Edit</button>
+            </form>
             <form action="/admin/delete-product" method="POST">
-                <button class="btn">Delete</button>
+              <input type="hidden" value="<%= product.id %>" name="productId">
+              <button class="btn" type="submit">Delete</button>
             </form>
           </div>
         </article>
