--- a/Node.js/02_shop/views/includes/main.ejs
+++ b/Node.js/02_shop/views/includes/main.ejs
@@ -15,7 +15,7 @@
           <li class="item"><a class="<%= path === '/cart' ? 'active' : '' %>" href="/cart">View Cart</a></li>
           <li class="item"><a class="<%= path === '/orders' ? 'active' : '' %>" href="/orders">Orders</a></li>
           <li class="item"><a class="<%= path === '/admin/add-product' ? 'active' : '' %>" href="/admin/add-product">Add Product</a></li>
-          <li class="item"><a class="<%= path === '/admin/products' ? 'active' : '' %>" href="/admin/products">Admin Products</a></li>
+          <li class="item"><a class="<%= path === '/admin/products' || path === '/admin/edit-product'  ? 'active' : '' %>" href="/admin/products">Admin Products</a></li>
         </ul>
       </nav>
     </header>
