--- a/Node.js/02_shop/views/shop/cart.ejs
+++ b/Node.js/02_shop/views/shop/cart.ejs
@@ -6,35 +6,42 @@
                 <% products.forEach(p => { %>
                     <article class="card product-item">
                         <header class="card-header">
-                          <h2 class="product-title"><%= p.productData.name %></h2>
+                          <h2 class="product-title"><%= p.name %></h2>
                         </header>
                         <div class="card-img">
                           <img
-                            src="<%= p.productData.imgUrl %>"
-                            alt="<%= p.productData.name %>"
+                            
+                            src="<%= p.imgUrl %>"
+                            alt="<%= p.name %>" 
                           />
                         </div>
                         <div class="card-content">
-                          <h2 class="product-price">Rs. <%= p.productData.price %>/-</h2>
-                          <p class="product-desc"><%= p.productData.desc %></p>
+                          <h2 class="product-price">Rs. <%= p.price %>/-</h2>
+                          <p class="product-desc"><%= p.desc %></p>
                         </div>
                         <div class="card-action">
                           <div class="btn-grp">
                             <form action="/delete-cart-item" method="POST">
-                                <input type="hidden" name="productId" value="<%= p.productData.id%>">
+                                <input type="hidden" name="productId" value="<%= p.id%>">
                                 <button class="btn" type="submit">
                                     Remove from cart
                                 </button>
                             </form>
-                            <button class="btn">Qty. = <%= p.qty %></button>
+                            <button class="btn">Quantity = <%= p.cartItem.quantity %></button>
                           </div>
                         </div>
                       </article>
-                <% }) %>
-            </div>
+                      <% }) %>
+                    </div>
+                    <form action="/create-order" method="POST">
+                      <button class="btn" type="submit">Order Now !</button>
+                    </form>
         <% } else { %>
             <h1 style="text-align: center;">Nothing in the cart! ☹️</h1>
         <% } %>
     </main>
 </body>
 </html>
+
+<!-- p.productData.name -->
+<!-- p.name  -> sequelize -->
