--- a/Node.js/02_shop/views/shop/orders.ejs
+++ b/Node.js/02_shop/views/shop/orders.ejs
@@ -1,7 +1,24 @@
 <%- include('../includes/main.ejs') %>
 
-    <main class="order">
+    <main class="">
+        <% if (orders.length <= 0) { %>
         <h1>Your purchased items will be displayed here.</h1>
+        <% } else {%>
+            <ul>
+                <% orders.forEach(order => { %>
+                    <li>
+                        <h1># <%= order.id %></h1>
+                        <ul>
+                            <% order.products.forEach(product => { %>
+                                <li>
+                                    <%= product.name %> (<%= product.orderItem.quantity %>)
+                                </li>
+                            <% }) %>
+                        </ul>
+                    </li>
+                <% }) %>
+            </ul>
+        <% } %>
     </main>
 </body>
 </html>
