--- a/Node.js/02_shop/public/style.css
+++ b/Node.js/02_shop/public/style.css
@@ -124,10 +124,12 @@ button {
 }
 
 .grid {
+  max-width: 1200px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: stretch;
+  margin: 0px auto;
   margin-top: 2rem;
 }
 
@@ -157,10 +159,12 @@ main h1 {
 
 .card-img {
   width: 100%;
+  text-align: center;
 }
 
 .card-img img {
-  width: 100%;
+  min-width: 14rem;
+  max-width: 18rem;
   /* min-height: 180px;
   max-height: 200px; */
   height: 200px;
@@ -290,6 +294,60 @@ main h1 {
   margin-left: 2rem;
 }
 
-.order {
+.cart {
+  width: 18rem;
+}
+
+.cart h2 {
+  font-size: 1.1rem;
+}
+
+.cart .card-img {
   text-align: center;
+}
+
+.cart img {
+  max-width: 14rem;
+  height: 8rem;
+}
+
+.cart .card-action .btn {
+  font-size: 1rem;
+  padding: 2px;
+  margin-right: 0.5rem;
+}
+
+.order {
+  width: 12rem;
+}
+
+.order h2 {
+  font-size: 1.1rem;
+}
+
+.order .order-img {
+  max-width: 10rem;
+  height: 6rem;
+  margin: 0px auto;
+}
+
+.order-img img {
+  width: 100%;
+  height: 6rem;
+}
+
+.order .card-action .btn {
+  font-size: 0.8rem;
+  padding: 2px;
+}
+
+.delete {
+  border: 2px solid #ff0000;
+  color: #ff0000;
+}
+
+.delete:hover,
+.delete:active {
+  background-color: #ff0000;
+  color: white;
 }
