--- a/Node.js/02_shop/views/admin/products.ejs
+++ b/Node.js/02_shop/views/admin/products.ejs
@@ -26,7 +26,7 @@
             </form>
             <form action="/admin/delete-product" method="POST">
               <input type="hidden" value="<%= product.id %>" name="productId">
-              <button class="btn" type="submit">Delete</button>
+              <button class="btn delete" type="submit">Delete</button>
             </form>
           </div>
         </article>
