modified for using mongodb database

--- a/MongoDB/Shop/views/shop/cart.ejs
+++ b/MongoDB/Shop/views/shop/cart.ejs
@@ -22,7 +22,7 @@
                         </div>
                         <div class="card-action">
                           <div class="btn-grp">
-                            <button class="btn">Qty : <%= p.cartItem.quantity %></button>
+                            <button class="btn">Qty : <%= p.quantity %></button>
                             <form action="/products/<%= p._id %>" method="GET">
                               <button class="btn" type="submit">Details</button>
                             </form>
