--- a/MongoDB/Shop/views/shop/index.ejs
+++ b/MongoDB/Shop/views/shop/index.ejs
@@ -21,7 +21,7 @@
           <div class="card-action">
             <form action="/cart" method="POST">
               <button class="btn" type="submit">Add to Cart</button>
-              <input type="hidden" name="productId" value="<%= product.id %>">
+              <input type="hidden" name="productId" value="<%= product._id %>">
           </form>
           </div>
         </article>
