--- a/MongoDB/Shop/views/shop/product-detail.ejs
+++ b/MongoDB/Shop/views/shop/product-detail.ejs
@@ -11,7 +11,7 @@
             <p><%= product.desc  %></p>
             <form action="/cart" method="POST">
                 <button class="btn" type="submit">Add to Cart</button>
-                <input type="hidden" name="productId" value="<%= product.id %>">
+                <input type="hidden" name="productId" value="<%= product._id %>">
             </form>
         </div>
     </main>
