added flash message

--- a/MongoDB/Mongoose/Shop/views/auth/signup.ejs
+++ b/MongoDB/Mongoose/Shop/views/auth/signup.ejs
@@ -3,13 +3,18 @@
       <form action="/signup" method="POST" class="form-control">
         <div class="login-form">
             <h2 style="text-align: center;">Sign Up</h2>
+            <% if(errorMsg) { %>
+              <div class="flash-error">
+                <%= errorMsg %>
+              </div>
+            <% } %>
             <div class="inner-grp2">
               <label for="name">Name:</label>
-              <input type="text" id="name" name="name"/>
+              <input type="text" id="name" name="name" value="<%= oldInput.name || '' %>"/>
             </div>
             <div class="inner-grp2">
                 <label for="email">E-mail:</label>
-                <input type="email" id="email" name="email"/>
+                <input type="email" id="email" name="email" value="<%= oldInput.email || '' %>"/>
             </div>
             <div class="inner-grp2">
                 <label for="pass">Password:</label>
@@ -18,6 +23,7 @@
         </div>
         <input type="hidden" name="_csrf" value="<%= csrfToken %>">
         <button class="btn login" type="submit">Sign Up</button>
+        <p class="signup-bottom">Already have account? <a href="/login">Login</a></p>
       </form>
     </main>
   </body>
