--- a/MongoDB/Mongoose/Shop/views/auth/login.ejs
+++ b/MongoDB/Mongoose/Shop/views/auth/login.ejs
@@ -2,9 +2,15 @@
     <main>
       <form action="/login" method="POST" class="form-control">
         <div class="login-form">
+            <h2 style="text-align: center;">Login</h2>
+            <% if(errorMsg) { %>
+              <div class="flash-error">
+                <%= errorMsg %>
+              </div>
+            <% } %>
             <div class="inner-grp2">
                 <label for="email">E-mail:</label>
-                <input type="email" id="email" name="email"/>
+                <input type="email" id="email" name="email" value="<%= oldInput.email || '' %>"/>
             </div>
             <div class="inner-grp2">
                 <label for="pass">Password:</label>
@@ -13,6 +19,7 @@
         </div>
         <input type="hidden" name="_csrf" value="<%= csrfToken %>">
         <button class="btn login" type="submit">Login</button>
+        <p class="login-bottom">Don't have any account? <a href="/signup">Sign up</a></p>
       </form>
     </main>
   </body>
