--- a/MongoDB/Mongoose/Shop/public/style.css
+++ b/MongoDB/Mongoose/Shop/public/style.css
@@ -1,6 +1,8 @@
 body {
   background-color: #e8e8e8;
   margin: 8px 0px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 .main-header {
@@ -8,6 +10,11 @@ body {
   padding: 10px;
   /* border-radius: 0.5rem; */
   margin: 0px;
+}
+
+.main-header .nav {
+  display: flex;
+  justify-content: space-between;
 }
 
 .ul {
@@ -68,7 +75,7 @@ body {
   font-size: 1.1rem;
   padding-left: 0.5rem;
   margin-top: 0.5rem;
-  margin-left: 0.5rem;
+  margin-left: 0.75rem;
   border: 2px solid #000000;
   font: inherit;
   border-radius: 0.25rem;
@@ -93,7 +100,8 @@ body {
 
 .inner-grp {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  margin-left: 0.5rem;
 }
 
 .inner-grp2 {
@@ -187,7 +195,7 @@ main h1 {
 
 .btn {
   font: inherit;
-  font-weight: 600;
+  font-weight: 500;
   border: 2px solid #00695c;
   color: #00695c;
   background: white;
@@ -250,10 +258,11 @@ main h1 {
   margin: 8rem auto;
   display: flex;
   box-shadow: 0 0 8px rgb(86, 85, 85);
-  border-radius: .5rem;
+  border-radius: 0.5rem;
 }
 
-.pro-detail .pro-detail-img, .pro-detail .detail {
+.pro-detail .pro-detail-img,
+.pro-detail .detail {
   width: 50%;
   display: flex;
   flex-direction: column;
@@ -263,7 +272,7 @@ main h1 {
   width: 100%;
   min-height: 260px;
   max-height: 300px;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
 }
 
 .pro-detail .detail {
@@ -275,7 +284,7 @@ main h1 {
   padding: 0;
 }
 
-.detail h2{
+.detail h2 {
   font-size: 1.25rem;
   margin-top: 0.75rem;
 }
@@ -312,15 +321,19 @@ main h1 {
   border-radius: 6px;
 }
 
-.cart .card-action .btn {
-  font-size: 1rem;
+.cart .card-action .btn-grp .btn {
+  font-size: 0.9rem;
   padding: 2px;
-  margin-right: 0.5rem;
+  margin-right: 0rem;
 }
 
-.order .card-action .btn {
+/* .order .card-action .btn {
   font-size: 0.8rem;
   padding: 2px;
+} */
+
+.cart .card-action .btn-grp {
+  justify-content: space-around;
 }
 
 .delete {
@@ -399,4 +412,57 @@ main h1 {
   font-size: 16px;
   margin-top: 5px;
   margin-bottom: 6px;
+}
+
+.login-form {
+  padding: 0px 1.5rem;
+}
+
+.login {
+  font-size: 1.25rem;
+}
+
+.logout-btn {
+  margin-top: 0;
+  color: white;
+  border: none;
+  padding: 0;
+  font-size: 1.5rem;
+  background-color: none;
+}
+
+.ul .item .logout-btn:hover,
+.ul .item .logout-btn:active {
+  color: yellow;
+}
+
+.auth-btn.logout-btn {
+  font-family: inherit;
+  font-weight: 400;
+  outline: none;
+  border: none;
+  background: none;
+  color: white;
+  padding: 10px 0px;
+  cursor: pointer;
+}
+
+.signup-bottom,
+.login-bottom {
+  text-align: center;
+  margin: 4px auto;
+}
+
+.signup-bottom a,
+.login-bottom a {
+  color: #045152;
+  text-decoration: underline;
+  text-underline-offset: 5px;
+  font-weight: 500;
+}
+
+.flash-error {
+  color: #FF0000;
+  text-align: center;
+  font-size: 1.1rem;
 }
