--- a/MongoDB/Mongoose/Shop/views/admin/edit-product.ejs
+++ b/MongoDB/Mongoose/Shop/views/admin/edit-product.ejs
@@ -13,7 +13,7 @@
             </div>
             <div class="price">
               <label for="price">Price:</label>
-            <input type="number" id="price" name="updatedPrice" value="<%= isEditing ? product.price : '' %>"/>
+            <input type="number" id="price" name="updatedPrice" value="<%= isEditing ? product.price.toLocaleString('en-IN') : '' %>"/>
             </div>
           </div>
           <div class="inner-grp2">
