--- a/MongoDB/Mongoose/Shop/views/auth/login.ejs
+++ b/MongoDB/Mongoose/Shop/views/auth/login.ejs
@@ -16,10 +16,10 @@
                 <label for="pass">Password:</label>
                 <input type="password" id="pass" name="password">
             </div>
-        </div>
-        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-        <button class="btn login" type="submit">Login</button>
-        <p class="login-bottom">Don't have any account? <a href="/signup">Sign up</a></p>
+          </div>
+          <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+          <button class="btn login" type="submit">Login</button>
+          <p class="login-bottom"><a href="/reset">Forgot password?</a> <br><br>Don't have any account? <a href="/signup">Sign up</a></p>
       </form>
     </main>
   </body>
