--- a/MongoDB/Mongoose/Shop/views/shop/product-list.ejs
+++ b/MongoDB/Mongoose/Shop/views/shop/product-list.ejs
@@ -15,7 +15,7 @@
             />
           </div>
           <div class="card-content">
-            <h2 class="product-price">Rs. <%= product.price %>/-</h2>
+            <h2 class="product-price">Rs. <%= product.price.toLocaleString('en-IN') %>/-</h2>
             <p class="product-desc"><%= product.desc %></p>
           </div>
           <div class="card-action">
@@ -23,13 +23,11 @@
               <form action="/products/<%= product._id %>" method="GET">
                 <button class="btn" type="submit">Details</button>
               </form>
-              <% if (isAuthenticated) { %>
-                <form action="/cart" method="POST">
-                  <button class="btn" type="submit">Add to Cart</button>
-                  <input type="hidden" name="productId" value="<%= product._id %>">
-                  <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                </form>
-              <% } %>
+              <form action="/cart" method="POST">
+                <button class="btn" type="submit">Add to Cart</button>
+                <input type="hidden" name="productId" value="<%= product._id %>">
+                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+              </form>  
             </div>
           </div>
         </article>
