--- a/MongoDB/Mongoose/Shop/public/style.css
+++ b/MongoDB/Mongoose/Shop/public/style.css
@@ -60,7 +60,7 @@ body {
 }
 
 .form-control {
-  width: max-content;
+  max-width: 30rem;
   margin: 3rem auto;
   padding: 1rem 0;
   display: flex;
@@ -456,8 +456,8 @@ main h1 {
 .signup-bottom a,
 .login-bottom a {
   color: #045152;
-  text-decoration: underline;
-  text-underline-offset: 5px;
+  text-decoration: none;
+  /* text-underline-offset: 5px; */
   font-weight: 500;
 }
 
